# dynamo-lite

./: README.md
dynamo-new/: .gitignore  Cargo.toml  Makefile  basic_test.toml  benchmark.toml  generate_all_graphs.py  run_benchmark.py
dynamo-new/src/: bench_client.rs  cart_client.rs  client.rs  consistent_hash.rs  lib.rs  messages.rs  node.rs  vector_clock.rs  versioned_value.rs
dynamo-new/tests/: advanced_tests.rs  integration_tests.rs  node_addition_tests.rs
reactor-master/: .gitignore  Cargo.toml  Makefile  README.md
reactor-master/.github/workflows/: docs.yml  rust.yml
reactor-master/actor/: Cargo.toml
reactor-master/actor/benches/: arena_rc_arc.rs  priority_q_bench.rs
reactor-master/actor/src/: chaos_manager.rs  codec.rs  err.rs  lib.rs  node_comm.rs  reactor_channel.rs  recv.rs  send.rs
reactor-master/docs/: actor_design.d2  node_design.d2  seq.d2  subdecoder.md
reactor-master/examples/: how_to.md
reactor-master/examples/ab/: Cargo.toml  Makefile  ab.toml
reactor-master/examples/ab/src/: lib.rs
reactor-master/examples/paxos/: Cargo.toml  Makefile  README.md  paxos.toml
reactor-master/examples/paxos/src/: acceptor.rs  common.rs  leader.rs  lib.rs
reactor-master/examples/ping_pong/: Cargo.toml  Makefile  README.md  ping_pong.toml
reactor-master/examples/ping_pong/src/: lib.rs
reactor-master/examples/ping_pong_with_codegen/: Cargo.toml  Makefile
reactor-master/examples/ping_pong_with_codegen/jobc/: Cargo.toml
reactor-master/examples/ping_pong_with_codegen/jobc/src/: main.rs
reactor-master/examples/ping_pong_with_codegen/node/: Cargo.toml
reactor-master/examples/ping_pong_with_codegen/node/src/: main.rs
reactor-master/examples/read_write_server/: Cargo.toml  Makefile  read_write.toml
reactor-master/examples/read_write_server/src/: client_utils.rs  lib.rs  reader.rs  server.rs  writer.rs
reactor-master/generic_jctrl/: Cargo.toml
reactor-master/generic_jctrl/src/: main.rs
reactor-master/generic_nctrl/: Cargo.toml  README.md
reactor-master/generic_nctrl/src/: main.rs
reactor-master/instrument/: Cargo.toml
reactor-master/instrument/src/: lib.rs
reactor-master/job_manager/: Cargo.toml
reactor-master/job_manager/src/: lib.rs  placement.rs
reactor-master/macros/: Cargo.toml
reactor-master/macros/src/: lib.rs
reactor-master/macros/tests/: test_subdecoder.rs
reactor-master/node/: Cargo.toml
reactor-master/node/src/: code_gen.rs  lib.rs  lib_builder.rs  op_lib_manager.rs  op_macro.rs  rpc.rs
reactor-master/reactor-dashboard/: .gitignore  README.md  package.json
reactor-master/reactor-dashboard/api-client/: package.json  tsconfig.json
reactor-master/reactor-dashboard/api-client/.openapi-generator/: FILES
reactor-master/reactor-dashboard/api-client/src/: api.ts  base.ts  common.ts  configuration.ts  index.ts  tsconfig.json
reactor-master/reactor-dashboard/api-client/src/.openapi-generator/: FILES
reactor-master/reactor-dashboard/api-client/src/docs/: DefaultApi.md  DisableMsgDelayRequest.md  MsgDelayRequest.md  MsgDuplicationRequest.md  MsgLossRequest.md  RegistrationArgs.md  RemoteActorInfo.md  SpawnArgs.md  StatusResponse.md
reactor-master/reactor-dashboard/ui/: index.html  package.json
reactor-master/reactor-dashboard/ui/src/: App.css  App.tsx  reactor-ctrl.ts  types.ts
reactor-master/reactor-dashboard/ui/src/components/: app-sidebar.tsx  deploy-form.tsx  header.tsx  node-card.tsx
reactor-master/reactor-dashboard/ui/src/components/ui/: sidebar.tsx
reactor-master/rpc_client/: Cargo.toml  README.md
reactor-master/rpc_client/.openapi-generator/: FILES
reactor-master/rpc_client/docs/: DefaultApi.md  DisableMsgDelayRequest.md  MsgDelayRequest.md  MsgDuplicationRequest.md  MsgLossRequest.md  RegistrationArgs.md  RemoteActorInfo.md  SpawnArgs.md  StatusResponse.md
reactor-master/rpc_client/src/apis/: configuration.rs  default_api.rs
reactor-master/rpc_client/src/models/: disable_msg_delay_request.rs  mod.rs  msg_delay_request.rs  msg_duplication_request.rs  msg_loss_request.rs  registration_args.rs  remote_actor_info.rs  spawn_args.rs  status_response.rs
