[package]
name = "dynamo-new"
version = "0.1.0"
rust-version = "1.89"
edition = "2024"

[lib]
name = "dynamo_new"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "real_benchmark"
path = "src/bin/real_benchmark.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = { version = "2.0.0", features = ["serde"] }
tokio-util = { version = "0.7", features = ["full"] }
reactor-actor = { path = "../reactor-master/actor" }
reactor-macros = { path = "../reactor-master/macros" }
lazy_static = "1.5.0"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
log = "0.4.27"
md-5 = "0.10"
