[workspace]
members = [
    "actor",
    "node",
    "rpc_client",
    "job_manager",
    "generic_nctrl",
    "generic_jctrl",
    "macros",
    "examples/paxos",
    "examples/ping_pong",
    "examples/read_write_server",
    "examples/ab",
]

exclude = [
    "examples/ping_pong_with_codegen"
]
resolver = "2"

[workspace.package]
rust-version = "1.89"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Satyam Jay"]


[workspace.dependencies]
log = "0.4"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
bincode = { version = "2.0.0", features = ["serde"] }
futures = "0.3"
socket2 = { version = "0.6", features=["all"]}
thiserror = "2.0"


# I dont know what these do
# [profile.profiling]
# inherits = "release"
# debug = true
# opt-level = 0
# codegen-units = 1
# panic = "abort"
# overflow-checks = true
# lto = false

# [build]
# rustflags = ["-C", "force-frame-pointers=yes"]
