[package]
name = "reactor-actor"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bincode.workspace = true
futures.workspace = true
socket2.workspace = true
thiserror.workspace = true
anyhow = "1.0.98"
tracing = {version = "0.1.41", features = ["std", "attributes"] }
tracing-subscriber = "0.3.19"
tracing-shared = "0.1.5"
criterion = "0.6.0"
rand = "0.9.2"
serde_json = "1.0.143"
inventory = "0.3.21"
reactor-macros = { path = "../macros" }

[dev-dependencies]
lazy_static = "1.5.0"
tokio-util.workspace = true
bincode.workspace = true
bumpalo = "3.19.0"
criterion = "0.6.0"


[features]
default = []
