[package]
name = "reactor_jctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
tokio = { version = "1", features = ["full", "tracing"] }
reactor-jobm = { path = "../job_manager" }
serde = { version = "1", features = ["derive"] }
toml = "0.8.23"
clap = { version = "4", features = ["derive"] }
ordered-float = {version = "5"}

[dev-dependencies]
serde_json = "1.0"
