[package]
name = "reactor_nctrl"
version = "0.1.0"
edition = "2024"


[dependencies]
env_logger = "0.11.8"
tokio = { version = "1", features = ["full", "tracing"] }
reactor-node = { path = "../node" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reactor-inst = { path = "../instrument", optional=true }
log.workspace = true


[features]
default = []
swagger = ["reactor-node/swagger"]
jaeger = ["reactor-inst"]



