[package]
name = "reactor-inst"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bincode.workspace = true
futures.workspace = true
socket2.workspace = true
thiserror.workspace = true
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-shared = "0.1.5"
criterion = "0.6.0"

opentelemetry = { version = "0.30.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = ["trace", "rt-tokio", "experimental_metrics_custom_reader"] }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tracing-core = { version = "0.1.34" }
tracing-opentelemetry = {version="0.31.0" }
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics"] }

