[package]
name = "reactor-jobm"
version = "0.1.0"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
tokio.workspace = true
futures.workspace = true
serde = { version = "1", features = ["derive"] }
libloading = "0.8"
axum = "0.8.4"
utoipa = {version="5.3.1", features=["axum_extras"]}
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde_json = "1.0"
cargo_toml = "0.22"
thiserror = "2.0"
tempfile = "3.20.0"
ordered-float = {version = "5", features = ["serde"]}
reactor-client = {path="../rpc_client"}


[features]
default = ["dynop"]
instrument = []
dynop = []
