[package]
name = "reactor-macros"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version="2.0.90", features = ["full", "extra-traits"] }
quote = "1"
bytes = "1"
virtue = "0.0.18"
proc-macro2 = "1.0.95"

[dev-dependencies]
bincode.workspace = true
tokio-util.workspace = true
reactor-actor = {path = "../actor"}
lazy_static = "1.5.0"
