[package]
name = "paxos"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"

[lib]
name = "paxos"
crate-type = ["cdylib", "rlib"]

[features]
verbose = [ ]


[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = { version = "2.0.0", features = ["serde"] }
tokio-util = { version = "0.7", features = ["full"] }
reactor-actor = { path = "../../actor" }
reactor-macros = { path = "../../macros" }
lazy_static = "1.5.0"
env_logger = "0.11"
serde_json = "1.0.141"
log = "0.4.27"
rand = "0.9.1"
derive_more = { version = "2.0.1", features = ["from", "display", "add"] }