[workspace]
members = ["node", "jobc"]

resolver = "2"


[workspace.dependencies]
log = "0.4"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
bincode = { version = "2.0.0", features = ["serde"] }
futures = "0.3"
socket2 = "0.5.7"
thiserror = "2.0"



[workspace.package]
rust-version = "1.86"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Satyam Jay"]

