[package]
name = "ping_pong_node"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
tokio = { version = "1", features = ["full", "tracing"] }
reactor-jobm = { path = "../../../job_manager", feature=["dynop"] }
reactor-node = { path = "../../../node", features=["dynop"] }
askama = { version = "0.14.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
